--- a/02-nginx.yaml
+++ b/02-nginx.yaml
@@ -6,7 +6,7 @@
     ansible.builtin.package:
       name: nginx
       state: present
-  - name: run aginx
+  - name: run nginx
     ansible.builtin.service:
       name: nginx
       state: started
