--- a/04-variables.yaml
+++ b/04-variables.yaml
@@ -1,11 +1,11 @@
 - name: variables and PLAY level
   hosts: localhost
   vars: 
-     course: "Devops"
+     Course: "Devops"
      trainer: "Shiva"
      duration: "110hrs"
 
   tasks:
   - name: check variables
     ansible.builtin.debug:
-      msg: "Hi I am learning "{{course}}",Trainer is "{{trainer}}",Duration is "{{duration}}""
+      msg: "Hi I am learning "{{ Course }}",Trainer is "{{trainer}}",Duration is "{{duration}}""
