--- a/04-variables.yaml
+++ b/04-variables.yaml
@@ -8,4 +8,5 @@
   tasks:
   - name: check variables
     ansible.builtin.debug:
-      msg: "Hi, "{{Course}}""
+    ansible.builtin.set_fact:
+      msg: "Hi, {{Course}}"
