--- a/10-datatypes.yaml
+++ b/10-datatypes.yaml
@@ -22,8 +22,12 @@
 
   - name: print map
     ansible.builtin.debug:
-      msg: "name: {{Expirence}}"
+      msg: "name: {{Experience}}"
 
   - name: print Boolean
     ansible.builtin.debug:
       msg: "name: {{Trainer}}"
+  
+  - name: print key value pair
+     ansinle.builtin.debug:
+       msg: "name: {{NAME}}"
