--- a/12-loops.yaml
+++ b/12-loops.yaml
@@ -4,7 +4,7 @@
   - name: loops
     ansible.builtin.debug:
        msg: "hello {{item}}" #item is a defined keyword
-    loops:
+    loop:
     - ramesh
     - suresh
     - Robert
