--- a/14-loops.yaml
+++ b/14-loops.yaml
@@ -6,7 +6,7 @@
     ansible.builtin.package:
       name: "{{item.name}}"
       state: "{{item.state}}"
-    loops:
+    loop:
     - {name: 'git', state: 'present'}
     - {name: 'mysql', state: 'absent'}
     - {name: 'postfix', state: 'absent'}
